# 3-package-honey_badger

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: build.yaml
src/: __main__.py  blockfont.py  functions.py
src/textmodifier/: __init__.py  __main__.py  blockfont.py  functions.py
tests/: test_block_text.py  test_fixed_length_decode.py  test_fixed_length_encode.py  test_remove_vowels.py  test_reverse_text.py
