[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honey-badger-text-modifier"
version = "0.1.0"
description = "A lighthearted Python package with text modification utilities."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Minho Eune" },
  { name = "Alejandro Fiestas" }
]
keywords = ["python", "text", "package", "utilities"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Education",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/swe-students-spring2026/3-package-honey_badger"
Repository = "https://github.com/swe-students-spring2026/3-package-honey_badger.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
